@@ -15,6 +15,9 @@ See http://www.pserc.cornell.edu/matpower/ for more info.
 Changes since 5.0
 -----------------
 
+2/24/15
+    - Added 'intlinprog' tag to have_fcn().
+
 2/18/15
     - Changed generator and dispatchable load sections in printpf()
       output to include off-line units, after all, it already has a
